<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hitamabu"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.regis_fragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/panah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="Username"
        android:textColor="#FFA3A0A0"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        tools:layout_editor_absoluteX="45dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginStart="16dp"
        android:padding="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_edit_abu"
        android:hint="Masukkan Username "
        android:textColorHint="#CFCBCB"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <TextView
        android:textSize="17dp"
        android:textColor="#A3A0A0"
        android:id="@+id/tv_usr"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_username"/>


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@drawable/custom_edit_abu"
        android:hint="Masukkan Password "
        android:textColorHint="#FFCFCBCB"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@id/tv_usr" />

    <TextView
        android:id="@+id/tv_uml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="#FFA3A0A0"
        android:text="Confirm Password"
        android:textSize="17dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
       android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_edit_abu"
        android:hint="Confirm Password "
        android:textColorHint="#FFCFCBCB"
        app:layout_constraintTop_toBottomOf="@id/tv_uml" />

    <Button
        android:id="@+id/btn_regis"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="164dp"
        android:text="Daftar"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/textdaftar"
        app:layout_constraintBottom_toTopOf="@id/btn_regis"/>


</androidx.constraintlayout.widget.ConstraintLayout>