...
        android:text="Belum Punya Akun? "
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"/>
    <TextView
        android:id="@+id/tv_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Daftar Sekarang "
        android:textSize="16dp"
        android:layout_marginStart="8dp"
        android:textColor="#19639E"
...
